# YJU_GSC

./: .gitignore
2025_1/Baekjoon/: 2525.py
2025_1/Self-Learning/: Self-Learning1-1.py  Self-Learning1-2.py  Self-Learning10-1.py  Self-Learning10-2.py  Self-Learning11.py  Self-Learning12.py  Self-Learning13.py  Self-Learning14-1.py  Self-Learning14-2.py  Self-Learning15.py  Self-Learning16.py  Self-Learning17.py  Self-Learning18.py  Self-Learning19.py  Self-Learning2-1.py  Self-Learning2-2.py  Self-Learning20.py  Self-Learning21.py  Self-Learning3-1.py  Self-Learning3-2.py  Self-Learning4-1.py  Self-Learning4-2.py  Self-Learning5-1.py  Self-Learning5-2.py  Self-Learning6-2.py  Self-Learning6.py  Self-Learning7.py  Self-Learning8.py  Self-Learning9-1.py  Self-Learning9-2.py
2025_1/practice/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  (+8 more)
2026_1/Course-aiagent-main/: pyproject.toml
2026_1/Course-aiagent-main/260703/: test.py  test1.py
2026_1/Course-aiagent-main/260706/: test.py  test1.py  test2.py  test3.py
2026_1/Course-aiagent-main/260707/: test.py  test1.py  test2.py  test3.py
2026_1/Course-aiagent-main/260708/: test.py
2026_1/Course-aiagent-main/260709/: test.py
2026_1/Course-aiagent-main/260720/: test.py
2026_1/Course-aiagent-main/260721/: test.py
2026_1/Course-aiagent-main/chapter1/examples/: 02_system_prompt.py  03_parameters.py  04_streaming.py  05_stateless_and_agent.py  06_message_format.py  07_error_handling.py  08_structured_output.py
2026_1/Course-aiagent-main/chapter1/practices/p01_persona_chatbot/: app.py
(+782 files in other folders)
